--- a/src/index.html
+++ b/src/index.html
@@ -5,30 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Land</title>
     <link rel="stylesheet" href="./sass/index.scss" />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400&display=swap"
-      rel="stylesheet"
-    />
-
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Amita:wght@400;700&display=swap"
-      rel="stylesheet"
-    />
   </head>
 
   <body>
-    <div class="wrapper container">
-      <include src="./partials/header.html"></include>
-      <include src="./partials/hero.html"></include>
+    <div class="wrapper">
+      <include src="./partials/change-theme.html"></include>
+      <include src="./partials/wheel-text.html"></include>
     </div>
 
     <script type="module" src="./index.js"></script>
-    <script type="module" src="./js/text-around.js"></script>
     <script type="module" src="./js/theme.js"></script>
   </body>
 </html>
